--- a/index.html
+++ b/index.html
@@ -1,7 +1,151 @@
 <!DOCTYPE html>
 
 <html>
+  <head>
+    <meta charset="utf-8">
+    <title>ur not fun</title>
+
+    <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://ur-not.fun" />
+        <meta property="og:title" content="Ur Not Fun" />
+        <meta property="og:description" content="Looks like you've been deemed not fun-..." />
+        <meta property="og:image" content="not.png" />
+        <meta property="og:type" content="website">
+
+        <!--Twitter-->
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:url" content="https://ur-not.fun" />
+        <meta property="twitter:title" content="Ur Not Fun" />
+        <meta property="twitter:description" content="Looks like you've been deemed not fun-..." />
+        <meta property="twitter:image" content="not.png">
+
+    <link rel="icon" sizes="192x192" href="not.png">
+
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400&display=swap');
+        body {
+            margin: 0;
+            background-color: hsl(217, 7%, 23%);
+        }
+
+        .top-navi {
+            background-color: hsl(223, 7%, 20%);
+            height: 6vw;
+            width: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: 999999;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 1fr;
+            grid-template-areas: "top-navi-title top-navi-redir";
+            font-family: 'Nunito', sans-serif;
+            user-select: none;
+        }
+
+        .top-navi-redir {
+            grid-area: top-navi-redir;
+            color: hsl(223, 7%, 90%);
+            font-size: 1.5vw;
+            font-weight: 100;
+            text-align: right;
+            padding-right: 1rem;
+            margin-top: 2vw;
+            width: fit-content;
+            right: 0;
+            position: absolute;
+        }
+
+        .top-navi-title {
+            grid-area: top-navi-title;
+            color: hsl(223, 7%, 90%);
+            font-size: 2vw;
+            font-weight: 900;
+            padding-left: 1rem;
+            margin-top: 2vw;
+        }
+
+        .main {
+            height: 100%;
+            width: 100%;
+            position: relative;
+            margin-top: 3vw;
+            z-index: -1;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            column-gap: 1rem;
+            font-family: 'Nunito', sans-serif;
+            user-select: none;
+        }
+
+        .main-head {
+            font-size: 3vw;
+            font-weight: 900;
+            margin-top: 2.3vh;
+            position: relative;
+            left: 5%;
+            top: 22vw;
+            color: hsl(223, 7%, 90%);
+            transform: translate(-50%, -50%);
+            white-space: nowrap;
+        }
+
+        .ur-not {
+            position: relative;
+            left: -2%;
+            top: -0.3vh;
+            transform: translate(-50%, 0%);
+            height: 13vw;
+            width: auto;
+            /* flip the image */
+            -moz-transform: scaleX(-1);
+            -o-transform: scaleX(-1);
+            -webkit-transform: scaleX(-1);
+            transform: scaleX(-1);
+        }
+
+        .second {
+            width: 63%;
+            position: relative;
+            left: 50%;
+            transform: translate(-50%, 0%);
+            margin-top: 8vw;
+        }
+
+        .second h2 {
+            font-size: 1.5vw;
+            font-weight: 100;
+            color: hsl(223, 7%, 90%);
+            margin-top: 2vw;
+            margin-left: 1rem;
+            margin-right: 1rem;
+            font: 1.5vw 'Nunito', sans-serif;
+        }
+    </style>
+  </head>
   <body>
-     Hello World!
+    <section class="main">
+        <h2 class="main-head">Ur Not Fun</h2>
+        <image src="not.png" draggable="false" class="ur-not"></image>
+    </section>
+    <section class="second">
+        <h2>Uh oh! That's not good! Looks like you've just been deemed <strong>not fun</strong> by whoever sent you this! This is quite the unfortunate circumstance for you. You must be in tears by now after hearing this tragic news. This quick guide will quickly discuss and explain what it means to be <strong>not fun</strong>.</h2>
+        <h2>To be fun is to be someone who is always ready and willing to do fun things by themselves and their friends.</h2>
+    </section>
+
+    <section class="top-navi">
+        <h2 class="top-navi-title">Ur Not Fun</h2>
+        <h2 class="top-navi-redir" onclick="owin('https://discord.com/invite/program')">Fun Support Guild</h2>
+    </section>
+    
+
+    <script>
+        function owin(n) {
+            document.location.href = n;
+        }
+    </script>
   </body>
 </html>
