--- a/index.html
+++ b/index.html
@@ -5,21 +5,29 @@
     <meta charset="utf-8">
     <title>ur not fun</title>
 
+    <meta name="keywords" content="Fun, Sad, Not that fun, Not fun, Ur not fun, Unfun, boring">
+
+    <meta name="theme-color" content="#fbc11a">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Looks like you've been deemed not fun-...">
+    
     <meta property="og:type" content="website" />
         <meta property="og:url" content="https://ur-not.fun" />
         <meta property="og:title" content="Ur Not Fun" />
         <meta property="og:description" content="Looks like you've been deemed not fun-..." />
-        <meta property="og:image" content="not.png" />
-        <meta property="og:type" content="website">
+        <meta property="og:image" content="https://ur-not.fun/not.png" />
+        <meta property="og:type" content="website"><!--:secure_url-->
 
         <!--Twitter-->
-        <meta property="twitter:card" content="summary_large_image" />
         <meta property="twitter:url" content="https://ur-not.fun" />
         <meta property="twitter:title" content="Ur Not Fun" />
         <meta property="twitter:description" content="Looks like you've been deemed not fun-..." />
-        <meta property="twitter:image" content="not.png">
+        <meta property="twitter:image" content="https://ur-not.fun/not.png">
 
-    <link rel="icon" sizes="192x192" href="not.png">
+        
+
+    <link rel="icon" sizes="192x192" href="https://ur-not.fun/not.png">
 
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400&display=swap');
