--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>ur not fun</title>
+    <title>Ur Not Fun</title>
 
     <meta name="keywords" content="Fun, Sad, Not that fun, Not fun, Ur not fun, Unfun, boring">
 
@@ -132,6 +132,178 @@
             margin-right: 1rem;
             font: 1.5vw 'Nunito', sans-serif;
         }
+
+        .third {
+            width: 63%;
+            position: relative;
+            left: 50%;
+            transform: translate(-50%, 0%);
+            margin-top: 8vw;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            column-gap: 1rem;
+        }
+
+        .third h2 {
+            font-size: 1.5vw;
+            font-weight: 100;
+            color: hsl(223, 7%, 90%);
+            margin-top: 2vw;
+            margin-left: 1rem;
+            margin-right: 1rem;
+            font: 1.5vw 'Nunito', sans-serif;
+            width: 25vw;
+        }
+
+        .third img {
+            height: 20vw;
+            width: auto;
+            border-radius: .5vw;
+            box-shadow: 0 0 .8vw hsla(262, 58%, 6%, 0.221), 0 0 1vw hsla(262, 58%, 6%, 0.221);
+        }
+
+        .fourth {
+            width: 63%;
+            position: relative;
+            left: 50%;
+            transform: translate(-50%, 0%);
+            margin-top: 8vw;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            column-gap: 1rem;
+        }
+
+        .fourth h2 {
+            font-size: 1.5vw;
+            font-weight: 100;
+            color: hsl(223, 7%, 90%);
+            margin-top: 2vw;
+            margin-left: 1rem;
+            margin-right: 1rem;
+            font: 1.5vw 'Nunito', sans-serif;
+            width: 25vw;
+        }
+
+        .fourth img {
+            height: 20vw;
+            width: auto;
+            border-radius: .5vw;
+            box-shadow: 0 0 .8vw hsla(262, 58%, 6%, 0.221), 0 0 1vw hsla(262, 58%, 6%, 0.221);
+        }
+
+        .fifth {
+            width: 63%;
+            position: relative;
+            left: 51%;
+            transform: translate(-50%, 0%);
+            margin-top: 8vw;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            column-gap: 2rem;
+        }
+
+        .fifth h2 {
+            font-size: 1.5vw;
+            font-weight: 100;
+            color: hsl(223, 7%, 90%);
+            margin-top: 2vw;
+            margin-left: 1rem;
+            margin-right: 1rem;
+            font: 1.5vw 'Nunito', sans-serif;
+            width: 25vw;
+        }
+
+        .fifth img {
+            height: 37vw;
+            width: auto;
+            border-radius: .5vw;
+            box-shadow: 0 0 .8vw hsla(262, 58%, 6%, 0.221), 0 0 1vw hsla(262, 58%, 6%, 0.221);
+        }
+
+        .sixth {
+            width: 63%;
+            position: relative;
+            left: 50%;
+            transform: translate(-50%, 0%);
+            margin-top: 8vw;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            column-gap: 1rem;
+        }
+
+        .sixth h2 {
+            font-size: 1.5vw;
+            font-weight: 100;
+            color: hsl(223, 7%, 90%);
+            margin-top: 2vw;
+            margin-left: 1rem;
+            margin-right: 1rem;
+            font: 1.5vw 'Nunito', sans-serif;
+        }
+
+        .sixth h1 {
+            font-size: 2vw;
+            font-weight: 1000;
+            color: hsl(223, 7%, 90%);
+            margin-top: 2vw;
+            margin-left: 1rem;
+            margin-right: 1rem;
+            font: 2vw 'Nunito', sans-serif;
+        }
+
+        .credit {
+            width: 63%;
+            position: relative;
+            left: 50%;
+            transform: translate(-50%, 0%);
+            margin-top: 8vw;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            column-gap: 1rem;
+        }
+
+        .credit h2 {
+            font-size: .5vw;
+            font-weight: 100;
+            color: hsl(223, 7%, 90%);
+            margin-top: 2vw;
+            margin-left: 1rem;
+            margin-right: 1rem;
+            font: 1.5vw 'Nunito', sans-serif;
+        }
+
+        .footer {
+            width: 100%;
+            height: 5vw;
+            background-color: hsl(223, 7%, 20%);
+            position: relative;
+            bottom: 0;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            column-gap: 1rem;
+        }
+
+        .footer h2 {
+            font-size: 1vw;
+            font-weight: 100;
+            color: hsl(223, 7%, 90%);
+            margin-top: 1.3vw;
+            margin-left: 1rem;
+            margin-right: 1rem;
+            font: 1.5vw 'Nunito', sans-serif;
+        }
     </style>
   </head>
   <body>
@@ -141,15 +313,56 @@
     </section>
     <section class="second">
         <h2>Uh oh! That's not good! Looks like you've just been deemed <strong>not fun</strong> by whoever sent you this! This is quite the unfortunate circumstance for you. You must be in tears by now after hearing this tragic news. This quick guide will quickly discuss and explain what it means to be <strong>not fun</strong>.</h2>
-        <h2>To be fun is to be someone who is always ready and willing to do fun things by themselves and their friends.</h2>
+        <h2>To be fun is to be someone who is always ready and willing to do fun things by themselves and their friends. A fun person <strong>will not</strong> turn down a fun opportunity, even if their life depends on it!</h2>
+    </section>
+
+    <section class="third">
+        <img src="not_eg1.png" />
+        <h2>Here's a prime example of an someone who is <strong>not fun</strong>. Someone as opportune as them offered a chance to do something <strong>very</strong> fun, but this person denied the offer. That is <strong>not fun</strong> at all, and is punishable by ur-not.fun guidelines.</h2>
+    </section>
+
+    <section class="fourth">
+        <img src="not_eg2.png" />
+        <h2>Here's another comparably prime example of an someone who is <strong>not fun</strong>. This person was offered a perfect chance to have some fun playing chess, but they put some nerdy stuff first. This is what we consider <strong>not fun</strong>. Some may even say it's actually also because <span style="cursor: pointer; color: hsl(237, 100%, 71%); white-space: nowrap;" onclick="owin('https://ur-not.pro')">ur-not.pro</span> and you just can't come to terms with it.</h2>
+    </section>
+
+    <section class="fifth">
+        <img src="not_eg3.png" />
+        <h2>This is probably the worst thing someone could do. Not to mention the <strong>least fun</strong> thing you could say in response. They are not only ruining the fun by removing any and all affirmation, they're also making the person feel like they're behind on the fun. This is <strong>not fun</strong> at all, it's outright abhorrent and most certainly deemable of the ur-not.fun title.</h2>
+    </section>
+
+    <section class="sixth">
+        <h2>There are a thousand and more different scenarios and examples. But these three should just about sum up what it means to be <strong>not fun</strong>. But I think the two of us would rather not be sitting here forever and a day thinking about all the possibilities. So....</h2>
+        <br />
+        <h1>🤨 <strong>  What Makes ME Not Fun?</strong></h1>
+        <h2>You probably did something deserving of of being deemed <strong>not fun</strong>. You may have replicated one of the examples, or you did something that goes against the ur-not.fun guidelines. Or maybe even, you did <strong>nothing</strong> at all (doing nothing at all is still unfun as you're not even trying to contact this person to organise something fun with them.</h2>
+        <h1>🔧 <strong>  How Can I Become Fun?</strong></h1>
+        <h2>The truth is. You probably can't. If what you were doing before was genuinely so important that you had to go and be <strong>not fun</strong>, then you should probably get to doing that and catch up on being fun some other time, unless you decide to take back what you did to become <strong>not fun</strong>, then you will definitely be fun!. Alternatively, the person who named you as <strong>not fun</strong> can retract their claim. But until either option follows suite, you can't really do much.</h2>
+        <h2>This probably seems a little unfair. But to be honest. It's your fault for not being fun!</h2>
+        <br />
+        <h1>🤯 <strong>Conclusion!</strong></h1>
+        <h2>You're simply <strong>not fun</strong>. And you will live out your life as <strong>not fun</strong>, sorry! But at least you've been educated on how to be fun next time. And maybe now, you can even use this on someone else, or possibly use it as revenge on the person who said that you're <strong>not fun</strong>. Who knows ¯\_(ツ)_/¯ ..... So many questions... So little time....</h2>
+    </section>
+
+    <section class="credit">
+        <h4 style="color:hsl(223, 7%, 90%); font: 1vw 'Nunito', sans-serif; text-align: center;"><span style="cursor: pointer; color: hsl(237, 100%, 71%); white-space: nowrap;" onclick="owin('https://ur-not.fun')">ur-not.fun</span> was created by <span style="cursor: pointer; color: hsl(237, 100%, 71%); white-space: nowrap;" onclick="owin('https://discord.com/users/748164832028655717')">Deity</span>. Thank you to <span style="cursor: pointer; color: hsl(237, 100%, 71%); white-space: nowrap;" onclick="owin('https://discord.com/users/750310441800040478')">Conos</span> for the inspiration and for allowing me to use their assets, check out their arguably better version and more original version <span style="cursor: pointer; color: hsl(237, 100%, 71%); white-space: nowrap;" onclick="owin('https://ur-not.pro')">ur-not.pro</span>. Big thanks to <span style="cursor: pointer; color: hsl(237, 100%, 71%); white-space: nowrap;" onclick="owin('https://discord.com/users/856780995629154305')">Catra</span>, <span style="cursor: pointer; color: hsl(237, 100%, 71%); white-space: nowrap;" onclick="owin('https://discord.com/users/843457209064751104')">Koul</span> & <span style="cursor: pointer; color: hsl(237, 100%, 71%); white-space: nowrap;" onclick="owin('https://discord.com/users/621358600933081088')">🪐 Hades</span> for participating in making the examples, and also subjecting themselves to my overwhelmingly amazing presence.</h4>
+    </section>
+
+    <br><br>
+    <br><br>
+    <br>
+
+    <section class="footer">
+        <h2>In Contribution to the Ur-Not collection: </h2>
+        <h2 class="footer-title"><span style="cursor: pointer; color: hsl(237, 100%, 71%); white-space: nowrap;" onclick="owin('https://ur-not.fun')">ur-not.fun</span></h2>
+        <h2 class="footer-redir" onclick="owin('https://discord.com/invite/program')"><span style="cursor: pointer; color: hsl(237, 100%, 71%); white-space: nowrap;" onclick="owin('https://ur-not.pro')">ur-not.pro</span></h2>
     </section>
 
     <section class="top-navi">
-        <h2 class="top-navi-title">Ur Not Fun</h2>
+        <h2 class="top-navi-title"><strong>Ur Not Fun</strong></h2>
         <h2 class="top-navi-redir" onclick="owin('https://discord.com/invite/program')">Fun Support Guild</h2>
     </section>
     
-
     <script>
         function owin(n) {
             document.location.href = n;
