--- a/index.html
+++ b/index.html
@@ -355,12 +355,14 @@
     <section class="footer">
         <h2>In Contribution to the Ur-Not collection: </h2>
         <h2 class="footer-title"><span style="cursor: pointer; color: hsl(237, 100%, 71%); white-space: nowrap;" onclick="owin('https://ur-not.fun')">ur-not.fun</span></h2>
-        <h2 class="footer-redir" onclick="owin('https://discord.com/invite/program')"><span style="cursor: pointer; color: hsl(237, 100%, 71%); white-space: nowrap;" onclick="owin('https://ur-not.pro')">ur-not.pro</span></h2>
+        <h2 class="footer-redir" onclick="owin('https://ur-not.pro')"><span style="cursor: pointer; color: hsl(237, 100%, 71%); white-space: nowrap;" onclick="owin('https://ur-not.pro')">ur-not.pro</span></h2>
+      <h2 class="footer-redir" onclick="owin('https://ur-not.cool')"><span style="cursor: pointer; color: hsl(237, 100%, 71%); white-space: nowrap;" onclick="owin('https://ur-not.cool')">ur-not.cool</span></h2>
     </section>
 
     <section class="top-navi">
         <h2 class="top-navi-title"><strong>Ur Not Fun</strong></h2>
         <h2 class="top-navi-redir" onclick="owin('https://discord.com/invite/program')">Fun Support Guild</h2>
+      
     </section>
     
     <script>
